# basic_tool_lib

./: CMakeLists.txt  README.md  main.cpp  util.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  hash.cpp  hash.h  util.cpp  util.h
test/: CMakeLists.txt  main.cpp  testUtil.cpp  test_hash.cpp
